--- a/c++/nrgljubljana_interface/CMakeLists.txt
+++ b/c++/nrgljubljana_interface/CMakeLists.txt
@@ -1,22 +1,22 @@
 file(GLOB_RECURSE sources *.cpp)
-add_library(app4triqs_c ${sources})
+add_library(nrgljubljana_interface_c ${sources})
 
 # Link against triqs and enable warnings
-target_link_libraries(app4triqs_c PUBLIC triqs PRIVATE project_warnings)
+target_link_libraries(nrgljubljana_interface_c PUBLIC triqs PRIVATE project_warnings)
 
 # Configure compilation
-target_compile_options(app4triqs_c PUBLIC -fPIC)
-target_include_directories(app4triqs_c PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/c++>)
-target_compile_definitions(app4triqs_c PUBLIC
-				APP4TRIQS_GIT_HASH=${PROJECT_GIT_HASH}
+target_compile_options(nrgljubljana_interface_c PUBLIC -fPIC)
+target_include_directories(nrgljubljana_interface_c PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/c++>)
+target_compile_definitions(nrgljubljana_interface_c PUBLIC
+				NRGLJUBLJANA_INTERFACE_GIT_HASH=${PROJECT_GIT_HASH}
 				TRIQS_GIT_HASH=${TRIQS_GIT_HASH}
-				$<$<CONFIG:Debug>:APP4TRIQS_DEBUG>
+				$<$<CONFIG:Debug>:NRGLJUBLJANA_INTERFACE_DEBUG>
 				$<$<CONFIG:Debug>:TRIQS_DEBUG>
 				$<$<CONFIG:Debug>:TRIQS_ARRAYS_ENFORCE_BOUNDCHECK>
 			  )
 
 # Install library and headers
-install(TARGETS app4triqs_c EXPORT app4triqs-targets DESTINATION lib)
+install(TARGETS nrgljubljana_interface_c EXPORT nrgljubljana_interface-targets DESTINATION lib)
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION include FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")
 
 
@@ -32,7 +32,7 @@ if(ANALYZE_SOURCES)
   # Run clang-tidy if found
   if(CLANG_TIDY_EXECUTABLE)
     message(STATUS "clang-tidy found: ${CLANG_TIDY_EXECUTABLE}")
-    set_target_properties(app4triqs_c PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_EXECUTABLE}")
+    set_target_properties(nrgljubljana_interface_c PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_EXECUTABLE}")
   else()
     message(STATUS "clang-tidy not found in $PATH. Please consider installing clang-tidy for additional checks!")
   endif()
@@ -41,7 +41,7 @@ if(ANALYZE_SOURCES)
   if(CPPCHECK_EXECUTABLE)
     message(STATUS "cppcheck found: ${CPPCHECK_EXECUTABLE}")
     add_custom_command(
-	TARGET app4triqs_c
+	TARGET nrgljubljana_interface_c
 	COMMAND ${CPPCHECK_EXECUTABLE}
 	  --enable=warning,style,performance,portability
 	  --std=c++17
@@ -64,11 +64,11 @@ option(UBSAN OFF "Compile library and executables with LLVM Undefined Behavior S
 
 if(ASAN)
   find_package(sanitizer REQUIRED "asan")
-  target_link_libraries(app4triqs_c PUBLIC asan)
-  install(TARGETS asan EXPORT app4triqs-targets)
+  target_link_libraries(nrgljubljana_interface_c PUBLIC asan)
+  install(TARGETS asan EXPORT nrgljubljana_interface-targets)
 endif()
 if(UBSAN)
   find_package(sanitizer REQUIRED "ubsan")
-  target_link_libraries(app4triqs_c PUBLIC ubsan)
-  install(TARGETS ubsan EXPORT app4triqs-targets)
+  target_link_libraries(nrgljubljana_interface_c PUBLIC ubsan)
+  install(TARGETS ubsan EXPORT nrgljubljana_interface-targets)
 endif()
