Squashed 'nrgljubljana/' changes from f83b15e..a5c4c7a
a5c4c7a code cleanup & extraction of parameters
6c198d7 splitting into executable and library, fixes, time_mem.h containing timing and memory usage tracking classes, executable renamed to nrg
e6a88e2 separating to library

git-subtree-dir: nrgljubljana
git-subtree-split: a5c4c7a58e84bab4237ffac01cfac9a398e96ab2

--- a/c++/CMakeLists.txt
+++ b/c++/CMakeLists.txt
@@ -1,5 +1,5 @@
-set(sources nrg.cc)
-add_executable(nrgljubljana_c ${sources})
+set(sources nrg-lib.cc)
+add_library(nrgljubljana_c ${sources})
 
 # Enable warnings
 target_link_libraries(nrgljubljana_c PRIVATE project_warnings)
@@ -16,9 +16,13 @@ target_compile_definitions(nrgljubljana_c PUBLIC
 
 target_link_libraries(nrgljubljana_c PUBLIC openmp boost blas_lapack gmp)
 
+# Compile nrg executable
+add_executable(nrg nrg.cc)
+target_link_libraries(nrg PRIVATE nrgljubljana_c)
+
 # Install library and headers
 install(TARGETS nrgljubljana_c EXPORT nrgljubljana-targets DESTINATION lib)
-
+install(TARGETS nrg DESTINATION bin)
 
 # ========= Static Analyzer Checks ==========
 
