--- a/test/c++/CMakeLists.txt
+++ b/test/c++/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Build googletest
-add_subdirectory(gtest EXCLUDE_FROM_ALL)
+## add_subdirectory(gtest EXCLUDE_FROM_ALL)
 
 # Copy h5 files to binary dir
 file(GLOB_RECURSE all_h5_ref_files RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.ref.h5)
