--- a/c++/nrgljubljana_interface/CMakeLists.txt
+++ b/c++/nrgljubljana_interface/CMakeLists.txt
@@ -5,7 +5,7 @@ add_library(nrgljubljana_interface_c ${sources})
 target_link_libraries(nrgljubljana_interface_c PUBLIC triqs PRIVATE if_project_warnings)
 
 # Configure compilation
-target_compile_options(nrgljubljana_interface_c PUBLIC -fPIC)
+target_compile_options(nrgljubljana_interface_c PUBLIC -fPIC -DNRGIF_TEMPLATE_DIR="${CMAKE_INSTALL_PREFIX}/templates")
 target_include_directories(nrgljubljana_interface_c PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/c++>)
 target_compile_definitions(nrgljubljana_interface_c PUBLIC
 				NRGLJUBLJANA_INTERFACE_GIT_HASH=${PROJECT_GIT_HASH}
