--- a/test/python/CMakeLists.txt
+++ b/test/python/CMakeLists.txt
@@ -5,17 +5,16 @@ foreach(file ${all_h5_ref_files})
 endforeach()
 
 # List of all tests
-set(all_tests test1_siam)
+set(all_tests SIAM)
 
 foreach(test ${all_tests})
-  set(test_name ${test})
-  set(test_dir ${test})
-  set(test_script test.py)
-  configure_file(${test_dir}/${test_script} ${test_dir}/${test_script} COPYONLY)
-  add_test(NAME Py_${test_name} COMMAND ${TRIQS_PYTHON_INTERPRETER} ${test_script} WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${test_dir})
-  set_property(TEST Py_${test_name} APPEND PROPERTY ENVIRONMENT 
-     PYTHONPATH=${CMAKE_BINARY_DIR}/python:$ENV{PYTHONPATH} 
-     NRGIF_TEMPLATE_DIR=${PROJECT_SOURCE_DIR}/templates ${SANITIZER_RT_PRELOAD}
-     PATH=${CMAKE_BINARY_DIR}/nrgljubljana/tools:$ENV{PATH}
+  get_filename_component(test_name ${test} NAME_WE)
+  get_filename_component(test_dir ${test} DIRECTORY)
+  add_test(NAME Py_${test_name} COMMAND ${TRIQS_PYTHON_INTERPRETER} ${CMAKE_CURRENT_SOURCE_DIR}/${test_dir}/${test_name}.py WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${test_dir})
+  set_property(TEST Py_${test_name} APPEND PROPERTY ENVIRONMENT
+    PYTHONPATH=${CMAKE_BINARY_DIR}/python:$ENV{PYTHONPATH}
+    PATH=${CMAKE_BINARY_DIR}/nrgljubljana/tools:$ENV{PATH}
+    NRGIF_TEMPLATE_DIR=${PROJECT_SOURCE_DIR}/templates
+    ${SANITIZER_RT_PRELOAD}
   )
 endforeach()
