Squashed 'nrgljubljana/' changes from eb5cef9..a1d4140
a1d4140 ;; fix
d0cd3da ;; fix
714fd54 append cmake module path for mma
6e82812 ;; fix

git-subtree-dir: nrgljubljana
git-subtree-split: a1d41402f91bb60a4affe1edccc6beb41aac64c8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ message(STATUS "-------- CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX} --------"
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/share/cmake/Modules)
 
 # FindMathematica
-set (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake/Mathematica" ${CMAKE_MODULE_PATH})
+list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake/Mathematica)
 
 # Default to Release build type
 if(NOT CMAKE_BUILD_TYPE)
