cleanup of tests

--- a/test/python/CMakeLists.txt
+++ b/test/python/CMakeLists.txt
@@ -5,7 +5,8 @@ foreach(file ${all_h5_ref_files})
 endforeach()
 
 # List of all tests
-set(all_tests SIAM SIAM_QSZ)
+set(all_tests SIAM_QS)
+# SIAM_QSZ)
 
 foreach(test ${all_tests})
   get_filename_component(test_name ${test} NAME_WE)
