Squashed 'nrgljubljana/' changes from 645b1f6..48f6557
48f6557 sanitizer off
94719d9 Merge pull request #2 from Wentzell/PR_SANITZERS
1667a2b Merge pull request #1 from Wentzell/PR_README
eaf8f2e Enable sanitizer checks in travis build, currently failing due to boost singleton implementation
e02ff29 [cmake] Look for sanitizer libraries only if not already found, Link nrgljubljana_c against them
fabdbb5 Convert README to markdown and include link to travis build status

git-subtree-dir: nrgljubljana
git-subtree-split: 48f6557aa680ad55d2d157a892bda930de0ca518

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,15 +126,20 @@ if(Mathematica_FOUND)
 endif()
 
 # Dynamic Analyzer Checks
+
 option(ASAN OFF "Compile library and executables with LLVM Address Sanitizer")
 option(UBSAN OFF "Compile library and executables with LLVM Undefined Behavior Sanitizer")
 
 if(ASAN)
-  find_package(sanitizer REQUIRED "asan")
+  if(NOT TARGET asan)
+    find_package(sanitizer REQUIRED "asan")
+  endif()
   install(TARGETS asan EXPORT nrgljubljana-targets)
 endif()
 if(UBSAN)
-  find_package(sanitizer REQUIRED "ubsan")
+  if(NOT TARGET ubsan)
+    find_package(sanitizer REQUIRED "ubsan")
+  endif()
   install(TARGETS ubsan EXPORT nrgljubljana-targets)
 endif()
 
