--- a/templates/CMakeLists.txt
+++ b/templates/CMakeLists.txt
@@ -1,1 +1,2 @@
-install(DIRECTORY SIAM DESTINATION templates USE_SOURCE_PERMISSIONS)
+install(DIRECTORY SIAM Holstein
+  DESTINATION templates USE_SOURCE_PERMISSIONS)
