--- a/test/python/CMakeLists.txt
+++ b/test/python/CMakeLists.txt
@@ -5,8 +5,7 @@ foreach(file ${all_h5_ref_files})
 endforeach()
 
 # List of all tests
-set(all_tests SIAM_QS)
-# SIAM_QSZ)
+set(all_tests 1_SIAM_QS 2_SIAM_QSZ)
 
 foreach(test ${all_tests})
   get_filename_component(test_name ${test} NAME_WE)
