--- a/templates/SIAM/QSZ/data.in
+++ b/templates/SIAM/QSZ/data.in
@@ -3,8 +3,8 @@
 # Using sneg version 	1.251
 #!9
 # Number of channels, chain sites, subspaces: 
-1	Nmax	9
-# SCALE 	1.
+1	0	9
+# SCALE 	1.0201394465967895
 # Energies (GS energy subtracted, multiplied by 1/SCALE):
 -2	1
 1
