--- a/templates/SIAM/QS/data.in
+++ b/templates/SIAM/QS/data.in
@@ -8,22 +8,22 @@
 # Energies (GS energy subtracted, multiplied by 1/SCALE):
 -2	1
 1
-DIAG 	ham.model..QS_-2.1
+DIAG 	ham_-2.1
 -1	2
 2
-DIAG 	ham.model..QS_-1.2
+DIAG 	ham_-1.2
 0	1
 3
-DIAG 	ham.model..QS_0.1
+DIAG 	ham_0.1
 0	3
 1
-DIAG 	ham.model..QS_0.3
+DIAG 	ham_0.3
 1	2
 2
-DIAG 	ham.model..QS_1.2
+DIAG 	ham_1.2
 2	1
 1
-DIAG 	ham.model..QS_2.1
+DIAG 	ham_2.1
 # Irreducible matrix elements for Wilson chains:
 f 0 0
 6
@@ -148,19 +148,19 @@ tsigma_d
 dself_d
 6
 2	1	1	2
-0.14142135623730953	0.
+0. + 1.4142135623730951*U1	0.
 1	2	0	3
 0.
--0.1224744871391589
+1.*(0. - 1.224744871391589*U1)
 1	2	0	1
 0.	0.	0.
-0.	-0.07071067811865475	0.
+0.	0. + 1.*(0. - 0.7071067811865475*U1)	0.
 0	3	-1	2
 0.	0.
 0	1	-1	2
 0.	0.
 0.	0.
-0.	0.14142135623730953
+0.	0. + 1.*(0. + 1.4142135623730951*U1)
 -1	2	-2	1
 0.
 0.
