--- a/templates/SIAM/QSZ/data.in
+++ b/templates/SIAM/QSZ/data.in
@@ -8,31 +8,31 @@
 # Energies (GS energy subtracted, multiplied by 1/SCALE):
 -2	1
 1
-DIAG 	ham.model..QSZ_-2.1
+DIAG 	ham_-2.1
 -1	0
 2
-DIAG 	ham.model..QSZ_-1.0
+DIAG 	ham_-1.0
 -1	2
 2
-DIAG 	ham.model..QSZ_-1.2
+DIAG 	ham_-1.2
 0	-1
 1
-DIAG 	ham.model..QSZ_0.-1
+DIAG 	ham_0.-1
 0	1
 4
-DIAG 	ham.model..QSZ_0.1
+DIAG 	ham_0.1
 0	3
 1
-DIAG 	ham.model..QSZ_0.3
+DIAG 	ham_0.3
 1	0
 2
-DIAG 	ham.model..QSZ_1.0
+DIAG 	ham_1.0
 1	2
 2
-DIAG 	ham.model..QSZ_1.2
+DIAG 	ham_1.2
 2	1
 1
-DIAG 	ham.model..QSZ_2.1
+DIAG 	ham_2.1
 # Irreducible matrix elements for Wilson chains:
 f 0 0
 12
