--- a/templates/SIAM/QS/data.in
+++ b/templates/SIAM/QS/data.in
@@ -105,22 +105,17 @@ shop0
 dA_d
 6
 2	1	1	2
-1.4142135623730951	0.
+op.A_d_2.1_1.2
 1	2	0	3
-0.
--1.224744871391589
+op.A_d_1.2_0.3
 1	2	0	1
-1.	0.	0.
-0.	-0.7071067811865475	0.
+op.A_d_1.2_0.1
 0	3	-1	2
--1.	0.
+op.A_d_0.3_-1.2
 0	1	-1	2
-0.	0.
-1.	0.
-0.	1.4142135623730951
+op.A_d_0.1_-1.2
 -1	2	-2	1
-0.
-1.
+op.A_d_-1.2_-2.1
 tsigma_d
 8
 2	1	2	1
@@ -148,19 +143,14 @@ tsigma_d
 dself_d
 6
 2	1	1	2
-1.4142135623730951	0.
+op.self_d_2.1_1.2
 1	2	0	3
-0.
--1.224744871391589
+op.self_d_1.2_0.3
 1	2	0	1
-0.	0.	0.
-0.	-0.7071067811865475	0.
+op.self_d_1.2_0.1
 0	3	-1	2
-0.	0.
+op.self_d_0.3_-1.2
 0	1	-1	2
-0.	0.
-0.	0.
-0.	1.4142135623730951
+op.self_d_0.1_-1.2
 -1	2	-2	1
-0.
-0.
+op.self_d_-1.2_-2.1
