--- a/templates/SIAM/QSZ/data.in
+++ b/templates/SIAM/QSZ/data.in
@@ -160,81 +160,57 @@ shop0
 dA_d
 12
 2	1	1	2
--1.	0.
+op.A_d_2.1_1.2
 2	1	1	0
-1.	0.
+op.A_d_2.1_1.0
 1	2	0	3
-0.
--1.
+op.A_d_1.2_0.3
 1	2	0	1
-1.	0.	0.	0.
-0.	1.	0.	0.
+op.A_d_1.2_0.1
 1	0	0	1
-1.	0.	0.	0.
-0.	0.	-1.	0.
+op.A_d_1.0_0.1
 1	0	0	-1
-0.
-1.
+op.A_d_1.0_0.-1
 0	3	-1	2
-1.	0.
+op.A_d_0.3_-1.2
 0	1	-1	2
-0.	0.
-1.	0.
-0.	0.
-0.	-1.
+op.A_d_0.1_-1.2
 0	1	-1	0
-0.	0.
-0.	0.
-1.	0.
-0.	1.
+op.A_d_0.1_-1.0
 0	-1	-1	0
-1.	0.
+op.A_d_0.-1_-1.0
 -1	2	-2	1
-0.
-1.
+op.A_d_-1.2_-2.1
 -1	0	-2	1
-0.
-1.
+op.A_d_-1.0_-2.1
 tsigma_d
 0
 dself_d
 12
 2	1	1	2
--1.	0.
+op.self_d_2.1_1.2
 2	1	1	0
-1.	0.
+op.self_d_2.1_1.0
 1	2	0	3
-0.
--1.
+op.self_d_1.2_0.3
 1	2	0	1
-0.	0.	0.	0.
-0.	1.	0.	0.
+op.self_d_1.2_0.1
 1	0	0	1
-0.	0.	0.	0.
-0.	0.	-1.	0.
+op.self_d_1.0_0.1
 1	0	0	-1
-0.
-1.
+op.self_d_1.0_0.-1
 0	3	-1	2
-0.	0.
+op.self_d_0.3_-1.2
 0	1	-1	2
-0.	0.
-0.	0.
-0.	0.
-0.	-1.
+op.self_d_0.1_-1.2
 0	1	-1	0
-0.	0.
-0.	0.
-0.	0.
-0.	1.
+op.self_d_0.1_-1.0
 0	-1	-1	0
-0.	0.
+op.self_d_0.-1_-1.0
 -1	2	-2	1
-0.
-0.
+op.self_d_-1.2_-2.1
 -1	0	-2	1
-0.
-0.
+op.self_d_-1.0_-2.1
 sSZd
 9
 -2	1	-2	1
