Squashed 'nrgljubljana/' changes from a474a9d..379821f
379821f improve robustness of nrginit tests
bea6e60 removed op files
b8c6960 nrginit tests
3731441 [cmake] Fix cppcheck invocation, add --force to cppcheck options

git-subtree-dir: nrgljubljana
git-subtree-split: 379821fcca9097e9c031d5f153f6f16dbf08787f

--- a/c++/CMakeLists.txt
+++ b/c++/CMakeLists.txt
@@ -55,8 +55,10 @@ if(ANALYZE_SOURCES)
 	  --std=c++14
 	  --template=gcc
 	  --verbose
+	  --force
 	  --quiet
           ${sources}
+	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
     )
   else()
     message(STATUS "cppcheck not found in $PATH. Please consider installing cppcheck for additional checks!")
