[cmake] Build all targets in nrgljubljana, target dependencies in subtree to be fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,7 +107,7 @@ endif()
 
 # Make NRG Ljubljana Targets available without tests
 set(Build_Tests OFF)
-add_subdirectory(nrgljubljana EXCLUDE_FROM_ALL)
+add_subdirectory(nrgljubljana)
 
 if(TRIQS_WITH_PYTHON_SUPPORT)
   # Python interface
