[cmake] Explicitly list c++ tests for now

--- a/test/c++/CMakeLists.txt
+++ b/test/c++/CMakeLists.txt
@@ -8,7 +8,8 @@ foreach(file ${all_h5_ref_files})
 endforeach()
 
 # List of all tests
-file(GLOB_RECURSE all_tests RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
+#file(GLOB_RECURSE all_tests RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
+set(all_tests refreq_pts.cpp)
 
 foreach(test ${all_tests})
   get_filename_component(test_name ${test} NAME_WE)
