Squashed 'nrgljubljana/' changes from 0c2b996..2776a5b
2776a5b Merge branch 'Wentzell-master'
0694728 Merge branch 'master' of https://github.com/Wentzell/nrgljubljana into Wentzell-master
04f20bb install path fixed
17a7efd Merge latest app4triqs skeleton changes
7b8b71e [cmake] Fix various issues occuring when using a skeleton based app as a subproject
7b91cfb [doc] Fix sphinx target dependencies for the case of no CPP2PY modules
09b0a68 [cmake] Fix cppcheck invocation, add --force to cppcheck options
919639b [cmake] Find libasan and libubsan only if the targets are not already defined by the parent project

git-subtree-dir: nrgljubljana
git-subtree-split: 2776a5b3b5e3345abd6c7f1c63262a29ba9adb16

--- a/c++/CMakeLists.txt
+++ b/c++/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(sources nrg-lib.cc)
-add_library(nrgljubljana_c ${sources})
+add_library(nrgljubljana_c STATIC ${sources})
 
 # Enable warnings
 target_link_libraries(nrgljubljana_c PRIVATE project_warnings)
