--- a/doc/conf.py.in
+++ b/doc/conf.py.in
@@ -21,7 +21,7 @@ project = u'NRG Ljubljana - numerical renormalization group code'
 copyright = u'2016-2019 R. Žitko, Jozef Stefan Institute, Ljubljana'
 version = '@PROJECT_VERSION@'
 
-mathjax_path = "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=default"
+mathjax_path = "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5"
 templates_path = ['@PROJECT_SOURCE_DIR@/doc/_templates']
 
 html_theme = 'triqs'
