--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ endif()
 # ############
 # Define Project
 project(NRGLJUBLJANA VERSION 2019.11 LANGUAGES C CXX)
+get_directory_property(IS_SUBPROJECT PARENT_DIRECTORY)
 
 # ############
 # Load CPP2PY
@@ -58,9 +59,6 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 message(STATUS "-------- BUILD-TYPE: ${CMAKE_BUILD_TYPE} --------")
 
-# Build static libraries
-set(BUILD_SHARED_LIBS OFF)
-
 # Export the list of compile-commands into compile_commands.json
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
@@ -71,7 +69,9 @@ add_compile_options(
 )
 
 # Create an Interface target for compiler warnings
-add_library(project_warnings INTERFACE)
+if(NOT TARGET project_warnings)
+  add_library(project_warnings INTERFACE)
+endif()
 install(TARGETS project_warnings EXPORT nrgljubljana-targets)
 target_compile_options(project_warnings
   INTERFACE
@@ -172,14 +172,14 @@ add_subdirectory(tools)
 
 # Tests
 option(Build_Tests "Build tests" ON)
-if(Build_Tests)
+if(Build_Tests AND NOT IS_SUBPROJECT)
   enable_testing()
   add_subdirectory(test)
 endif()
 
 # Build the documentation
 option(Build_Documentation "Build documentation" OFF)
-if(Build_Documentation)
+if(Build_Documentation AND NOT IS_SUBPROJECT)
   message(STATUS "Documentation Build enabled")
   add_subdirectory(doc)
 endif()
@@ -194,7 +194,7 @@ add_subdirectory(nrginit)
 # Debian Package
 
 option(BUILD_DEBIAN_PACKAGE "Build a deb package" OFF)
-if(BUILD_DEBIAN_PACKAGE)
+if(BUILD_DEBIAN_PACKAGE AND NOT IS_SUBPROJECT)
   if(NOT CMAKE_INSTALL_PREFIX STREQUAL "/usr")
     message(FATAL_ERROR "CMAKE_INSTALL_PREFIX must be /usr for packaging")
   endif()
