Squashed 'nrgljubljana/' changes from 4371a7a..47c176a
47c176a spelling + 2.0 removed

git-subtree-dir: nrgljubljana
git-subtree-split: 47c176a1dcd13d5e6328eff766e952707c8ccea2

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,7 +1,7 @@
 # GSL
-find_package(GSL 2.0 REQUIRED)
+find_package(GSL REQUIRED)
 add_library(gsl INTERFACE)
-target_include_directories(gsl SYSTEM INTERFACE ${GSL_INCLUIDE_DIRS})
+target_include_directories(gsl SYSTEM INTERFACE ${GSL_INCLUDE_DIRS})
 target_link_libraries(gsl INTERFACE ${GSL_LIBRARIES})
 install(TARGETS gsl EXPORT nrgljubljana-targets)
 
