--- a/c++/nrgljubljana_interface/CMakeLists.txt
+++ b/c++/nrgljubljana_interface/CMakeLists.txt
@@ -20,7 +20,9 @@ target_compile_definitions(nrgljubljana_interface_c PUBLIC
 target_link_libraries(nrgljubljana_interface_c PRIVATE nrgljubljana_c)
 
 # C++ filesystem library [TO DO: no longer needed in GCC 9]
-target_link_libraries(nrgljubljana_interface_c PRIVATE stdc++fs)
+if($CXX_COMPILER_ID MATCHES "GNU" AND $CXX_COMPILER_VERSION VERSION_LESS 9.0.0)
+  target_link_libraries(nrgljubljana_interface_c PRIVATE stdc++fs)
+endif()
 
 # Install library and headers
 install(TARGETS nrgljubljana_interface_c EXPORT nrgljubljana_interface-targets DESTINATION lib)
