--- a/c++/nrgljubljana_interface/CMakeLists.txt
+++ b/c++/nrgljubljana_interface/CMakeLists.txt
@@ -19,6 +19,9 @@ target_compile_definitions(nrgljubljana_interface_c PUBLIC
 # Link against NRG
 target_link_libraries(nrgljubljana_interface_c PRIVATE nrgljubljana_c)
 
+# Add tool dependencies
+add_dependencies(nrgljubljana_interface_c adapt nrgchain matrix diag unitary broaden kk)
+
 # C++ filesystem library [TO DO: no longer needed in GCC 9]
 if($CXX_COMPILER_ID MATCHES "GNU" AND $CXX_COMPILER_VERSION VERSION_LESS 9.0.0)
   target_link_libraries(nrgljubljana_interface_c PRIVATE stdc++fs)
