--- a/c++/nrgljubljana_interface/CMakeLists.txt
+++ b/c++/nrgljubljana_interface/CMakeLists.txt
@@ -25,9 +25,10 @@ add_dependencies(nrgljubljana_interface_c adapt nrgchain matrix diag unitary bro
 # C++ filesystem library [TO DO: no longer needed in GCC 9]
 if((CMAKE_CXX_COMPILER_ID STREQUAL "GNU") AND (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "9.0.0"))
   target_link_libraries(nrgljubljana_interface_c PRIVATE stdc++fs)
-endif()
-if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  target_link_libraries(nrgljubljana_interface_c PRIVATE c++fs)
+elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  target_link_libraries(nrgljubljana_interface_c PRIVATE c++experimental)
+else
+  message(FATAL_ERROR "Don't know how to handle filesystem dependency.")
 endif()
 
 # Install library and headers
