--- a/c++/nrgljubljana_interface/CMakeLists.txt
+++ b/c++/nrgljubljana_interface/CMakeLists.txt
@@ -26,7 +26,7 @@ add_dependencies(nrgljubljana_interface_c adapt nrgchain matrix diag unitary bro
 if((CMAKE_CXX_COMPILER_ID STREQUAL "GNU") AND (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "9.0.0"))
   target_link_libraries(nrgljubljana_interface_c PRIVATE stdc++fs)
 elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  target_link_libraries(nrgljubljana_interface_c PRIVATE c++experimental)
+  target_link_libraries(nrgljubljana_interface_c PRIVATE c++experimental c++fs)
 else()
   message(FATAL_ERROR "Don't know how to handle filesystem dependency.")
 endif()
