removing filesystem lib

--- a/c++/nrgljubljana_interface/CMakeLists.txt
+++ b/c++/nrgljubljana_interface/CMakeLists.txt
@@ -23,15 +23,15 @@ target_link_libraries(nrgljubljana_interface_c PRIVATE nrgljubljana_c)
 add_dependencies(nrgljubljana_interface_c adapt nrgchain matrix diag unitary broaden kk)
 
 # C++ filesystem library
-if((CMAKE_CXX_COMPILER_ID STREQUAL "GNU") AND (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "9.0.0"))
-  target_link_libraries(nrgljubljana_interface_c PRIVATE stdc++fs)
-  message("[filesystem library] Using stdc++fs")
-elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  target_link_libraries(nrgljubljana_interface_c PRIVATE c++experimental c++fs)
-  message("[filesystem library] Using c++experimenal c++fs")
-else()
-  message(FATAL_ERROR "Don't know how to handle filesystem dependency.")
-endif()
+#if((CMAKE_CXX_COMPILER_ID STREQUAL "GNU") AND (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "9.0.0"))
+#  target_link_libraries(nrgljubljana_interface_c PRIVATE stdc++fs)
+#  message("[filesystem library] Using stdc++fs")
+#elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+#  target_link_libraries(nrgljubljana_interface_c PRIVATE c++experimental c++fs)
+#  message("[filesystem library] Using c++experimenal c++fs")
+#else()
+#  message(FATAL_ERROR "Don't know how to handle filesystem dependency.")
+#endif()
 
 # Install library and headers
 install(TARGETS nrgljubljana_interface_c EXPORT nrgljubljana_interface-targets DESTINATION lib)
