--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,8 +106,9 @@ if(Build_Tests AND NOT IS_SUBPROJECT)
 endif()
 
 # Make NRG Ljubljana Targets available without tests
-add_subdirectory(nrgljubljana EXCLUDE_FROM_ALL)
-install(TARGETS adapt nrgchain matrix diag unitary broaden kk EXPORT nrgljubljana_interface-targets RUNTIME DESTINATION bin)
+add_subdirectory(nrgljubljana)
+#add_subdirectory(nrgljubljana EXCLUDE_FROM_ALL)
+#install(TARGETS adapt nrgchain matrix diag unitary broaden kk EXPORT nrgljubljana_interface-targets RUNTIME DESTINATION bin)
 
 if(TRIQS_WITH_PYTHON_SUPPORT)
   # Python interface
