Provide skeleton for hilbert_transform implementation and test

--- a/test/c++/CMakeLists.txt
+++ b/test/c++/CMakeLists.txt
@@ -9,7 +9,7 @@ endforeach()
 
 # List of all tests
 #file(GLOB_RECURSE all_tests RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
-set(all_tests refreq_pts.cpp)
+set(all_tests refreq_pts.cpp hilbert_transform.cpp)
 
 foreach(test ${all_tests})
   get_filename_component(test_name ${test} NAME_WE)
