Squashed 'nrgljubljana/' changes from f5188e1..819950c
819950c time_mem namespace
9394055 fixes
03622f4 reverted
5e662b7 remove unused functions
b59f14f cosmetics
bcfb574 move semantics, virtual destructor in SPEC
b16698f shared_ptr for SPEC
0751d8a SpectrumPtr -> shared_ptr
1092f09 memory header
725d165 expl -> exp
f198dac bugfix
85501a7 unique_ptr for ExpvOutput, expl -> exp
c8460be const correctness
30860c2 any_of
a929203 const correctness
beca177 code cleanup, const correctness
9342e3a const correctness, In -> anc
394ebe7 cppguidelines improvements
9472c39 overlapping name corrections, const correctness, copy constructors
4b6f29f fixes
a49aac4 argv
087a66e long double -> double, *argv[] -> **argv, constructors, NOLINT
ebb4e95 to_stri g
63acb9b memory_time_brief_report & constructor fixes
493ba23 small fix
d8ffcaf to_string, typedef -> using, work on constructors, cleanup
15d841d WEIGHT_TOL moved
11e1648 t -> tm
39d01f2 w -> www, explicit constructors
66375dd suppress subdirs in cppcheck
abdedec exclude subdirectories
2210814 pass by ref
2b38419 pass by ref
3d2e5d5 10 -> base, avoid double conversions, named constants
574b213 pass by ref, typedef -> using, constructors, const correctness
24dc940 IterInfo: avoid direct access to global variable
1660183 cleanup: bins, F -> Fenergies, alpha, omega0 no longer globals, BaseSpectrum constructors, Rmaxvals cleanup

git-subtree-dir: nrgljubljana
git-subtree-split: 819950cf54662537c8f946310d68ec47b7623221

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ execute_process(COMMAND git rev-parse HEAD WORKING_DIRECTORY ${PROJECT_SOURCE_DI
 message(STATUS "${PROJECT_NAME} version : ${PROJECT_VERSION}")
 message(STATUS "${PROJECT_NAME} Git hash: ${PROJECT_GIT_HASH}")
 
-# Assert that Install directory is given and invalid.
+# Assert that Install directory is given and valid.
 if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT OR (NOT IS_ABSOLUTE ${CMAKE_INSTALL_PREFIX}))
   message(FATAL_ERROR "No install prefix given (or invalid)")
 endif()
