Squashed 'nrgljubljana/' changes from 499b904..6b64ebf
6b64ebf suppressions for cppcheck

git-subtree-dir: nrgljubljana
git-subtree-split: 6b64ebfbd3cb8ba8550ab7cd50c397dcb57fd785

--- a/c++/CMakeLists.txt
+++ b/c++/CMakeLists.txt
@@ -60,7 +60,9 @@ if(ANALYZE_SOURCES)
 	  --verbose
 	  --force
 	  --quiet
-    --suppress=*:*bindings*/*
+    --suppressions-list=suppressions.txt
+    --inline-suppr
+#    --suppress=*:*bindings*/*
 #    --suppress=*:*cblas*
 #    --suppress=*:*coewfnew*
     ${sources}
