Squashed 'nrgljubljana/' changes from c86ce3d..880f50a
880f50a Merge pull request #4 from Wentzell/DEV_BLAS_CMAKE
e514bf9 [cmake] Properly link against both blas and lapack libraries

git-subtree-dir: nrgljubljana
git-subtree-split: 880f50af20d29a6d817ae1c0de00761b5ddc4cdf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,8 +111,8 @@ install(TARGETS boost EXPORT nrgljubljana-targets)
 # BLAS/Lapack
 find_package(LAPACK REQUIRED)
 add_library(blas_lapack INTERFACE)
-target_compile_options(blas_lapack INTERFACE ${LAPACK_LINKER_FLAGS})
-target_link_libraries(blas_lapack INTERFACE ${LAPACK_LIBRARIES})
+target_compile_options(blas_lapack INTERFACE ${LAPACK_LINKER_FLAGS} ${BLAS_LINKER_FLAGS})
+target_link_libraries(blas_lapack INTERFACE ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
 install(TARGETS blas_lapack EXPORT nrgljubljana-targets)
 
 # GMP
