Squashed 'nrgljubljana/' changes from 880f50a..7b48676
7b48676 HASH not used in the code
9909798 data_has_rescale_energies

git-subtree-dir: nrgljubljana
git-subtree-split: 7b4867675b0b9b017868810ad01a441cbb55d2b1

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -15,7 +15,7 @@ macro(add_tool exec_name)
   target_compile_options(${exec_name} PRIVATE -fPIC -std=c++17)
   target_include_directories(${exec_name} PRIVATE $<BUILD_INTERFACE:${CURRENT_SOURCE_DIR}/${exec_name}>)
   target_compile_definitions(${exec_name} PRIVATE
-				NRGLJUBLJANA_GIT_HASH=${PROJECT_GIT_HASH}
+# (not used)				NRGLJUBLJANA_GIT_HASH=${PROJECT_GIT_HASH}
 				$<$<CONFIG:Debug>:NRGLJUBLJANA_DEBUG>
 			  )
 
