--- a/c++/CMakeLists.txt
+++ b/c++/CMakeLists.txt
@@ -15,6 +15,7 @@ target_compile_definitions(nrgljubljana_c PUBLIC
 				NRG_SYM_BASIC
 				$<$<BOOL:${SYM_MORE}>:NRG_SYM_MORE>
 				$<$<BOOL:${SYM_ALL}>:NRG_SYM_ALL>
+				$<$<BOOL:${CBLAS_WORKAROUND}>:CBLAS_WORKAROUND>
 )
 
 # Link dependencies
